# lsmsd2

./: .gitattributes  .gitignore  .project  LICENSE  README.md
doc/: .gitignore  Makefile.am  abstract.tex  configure.ac  design.tex  documentation.tex  main.tex  unipi.sty
doc/aggregations/: EMA.json  Momentum.json  RS.json  SMA.json  changeGranularity  facetWithEMA  newSMA.json  pipelineFacet.json  pipelineMOM  pipelineWithEMA
doc/chapters/: arch.tex  classes.tex  datamodel.tex  devman.tex  glossary.tex  legal.tex  manual.tex  modules.tex  requirements.tex  setup.tex  specs.tex  tests.tex  usecases.tex
doc/chapters/arch/: client.tex  dependencies.tex  distributed.tex  future.tex  scraper.tex  server.tex
doc/chapters/datamodel/: aggregations.tex  collections.tex  indexes.tex
doc/chapters/manual/: admin.tex  browsestrategies.tex  clientrun.tex  uploadstrategy.tex
doc/chapters/modules/: client.tex  common.tex  datamodel.tex  library.tex  scraper.tex  server.tex
doc/chapters/requirements/: functional.tex  nonfunctional.tex
doc/img/: test.drawio
doc/listings/: Skel.java  authtokens.json  coll_marketdata.json  coll_sources.json  coll_strategies.json  coll_users.json  marketdata.json  marketdatamarket.json  marketdatastart.json  pipelinegranularity.json  pipelineoutput.json  sources.json  sourcesmarket.id.json  strategies.json  strategiesname.json  strategiesruns.id.json  users.json
doc/m4/: ac_latex_package_fontenc.m4  ac_latex_package_require.m4  ac_latex_packages_require.m4  ac_prog_latexmk.m4
doc/stats/: findAuthTokenById  findMarketDataByName  findMarketDataByNameSorted  findStrategyByName  findUserById
(+345 files in other folders)
